# forket-av

./: .gitignore  CMakeLists.txt  README.md  antivirus  forket
include/: hash.hpp  mach_o.hpp  pe_analyzer.hpp  quarantine.hpp  realtime_monitoring.hpp  scanner.hpp  utils.hpp  yara_scanner.hpp
src/: hash.cpp  mach_o.cpp  main.cpp  pe_analyzer.cpp  quarantine.cpp  realtime_monitoring.cpp  scanner.cpp  utils.cpp  yara_scanner.cpp
